Bug 1316573 - Reset the information in EncryptionInfo to make MediaElement reusable from encrypted content to plain content. r=jya

MozReview-Commit-ID: 4OU0sb2OSzi